[build-system]
requires = ["setuptools>=70.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "CMGDB_utils"
version = "1.0.0"
description = "CMGDB utilities"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name = "Marcio Gameiro", email = "marciogameiro@gmail.com" },
]
requires-python = ">=3.9"
dependencies = [
  "CMGDB>=1.3.1",
  "DSGRN>=1.9.0",
  "graphviz>=0.20",
  "matplotlib>=3.6.0",
  "numpy>=1.23.0",
  "scipy>=1.11.4",
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]

[project.urls]
Repository = "https://github.com/marciogameiro/CMGDB_utils"
